worked on EF; still needs a fix in migrations

--- a/src/MediaCollectionCore/appsettings.json
+++ b/src/MediaCollectionCore/appsettings.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "database": {
+    "connection": "Data Source={replace}; Initial Catalog=MediaCoreDb; Integrated Security=true"
   }
 }
